# SourceRS

crates/source-fs/: Cargo.toml  README.md
crates/source-fs/examples/: steam_feature.rs
crates/source-fs/src/: errors.rs  fs.rs  lib.rs  providers.rs  traits.rs  utils.rs
crates/source-fs/tests/: test.rs
crates/source-fs/tests/games/default/: gameinfo.txt  root_test.txt
crates/source-fs/tests/games/gmod/garrysmod/: gameinfo.txt  hl2_test.txt
crates/source-fs/tests/games/gmod/garrysmod/cfg/: mount.cfg
crates/source-fs/tests/games/hl2_ep2/ep2/: gameinfo.txt
crates/source-fs/tests/games/hl2_ep2/ep2/custom/test_mod/: ep2_test.txt
crates/source-fs/tests/games/portal/portal/: gameinfo.txt
crates/source-fs/tests/games/portal/portal/custom/test_mod/: mod_test.txt
crates/source-fs/tests/games/portal2/portal2/: gameinfo.txt
crates/source-fs/tests/games/simple/game/: gameinfo.txt
crates/source-fs/tests/games/simple/other_folder/: other_test.txt
crates/source-fs/tests/games/simple_inside/: gameinfo.txt
crates/source-fs/tests/games/simple_inside/other_folder/: other_test.txt
crates/source-kv/: Cargo.toml  README.md
crates/source-kv/examples/: read_gameconfig.rs  read_gameinfo.rs  read_vmf.rs  read_vmt.rs
crates/source-kv/examples/data/: GameConfig.txt  example.vmt  smoll.vmf
crates/source-kv/src/: de.rs  error.rs  lib.rs  ser.rs  value_ser.rs
crates/source-kv/tests/: test_basic.rs
crates/source-vmt/: Cargo.toml  README.md
crates/source-vmt/benches/: vmt_bench.rs
crates/source-vmt/examples/: advanced_usage.rs  basic_edit.rs  material_manager.rs  patch_resolution.rs  set_block_usage.rs
crates/source-vmt/examples/pseudo_game/game/: gameinfo.txt
crates/source-vmt/examples/pseudo_game/game/materials/: wall_mossy.vmt
crates/source-vmt/examples/pseudo_game/game/materials/base/: wall.vmt
crates/source-vmt/src/: block.rs  interner.rs  lib.rs  patch.rs  proxies.rs  system.rs  vmt.rs
crates/source-vmt/tests/: test_block.rs  test_patch.rs  test_proxies.rs  test_vmt.rs
